--- a/layartancap/landing.css
+++ b/layartancap/landing.css
@@ -9,6 +9,7 @@ body {
 .splash-screen{
     width: 100vw;
     height: 100vh;
+    background-color: #000;
     margin: 0 auto;
     text-align: center;
 }
