--- a/layartancap/landing.css
+++ b/layartancap/landing.css
@@ -671,6 +671,74 @@ th.duration {
 }
 
 
+/* login modal */
+#loginModal{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#loginModal .modal-title{
+    color: #fff;
+    font-size: 1.5em;
+    margin-top: 0;
+    margin-bottom: 1em;
+}
+
+#loginModal .modal-dialog{
+    max-width: 500px;
+}
+
+#loginModal input{
+    margin-bottom: 0.5em;
+    background-color: #717171;
+    border: #717171;
+}
+
+#loginModal .btn-login{
+    color: #fff;
+    background-color: #db0000;
+    border: #db0000;
+    width: 100%;
+    margin-top: 0.5em;
+}
+
+#loginModal .btn-login:hover{
+    color: #fff;
+    background-color: #7e0505;
+    border: #7e0505;
+}
+
+.btn-google{
+    color: #fff;
+    background-color: #14609e;
+    width: 100%;
+    margin-top: 0.5em;
+}
+
+.btn-google:hover{
+    color: #fff;
+    background-color: #0c3b61;
+}
+
+.label-caption{
+    margin-top: 1em;
+    color: #717171;
+}
+
+.form-check{
+    color: #717171;
+    margin-top: 0.5em;
+}
+
+.label-caption .red a{
+   color: #db0000 !important;
+   text-decoration: none;
+}
+
+#loginModal .modal-header::before{
+    display: none;
+}
+
+
 @media (min-width: 576px) {
     .modal-dialog {
         max-width: 768px;
