--- a/imsakiyah/style/style.css
+++ b/imsakiyah/style/style.css
@@ -14,6 +14,7 @@ h1 {
 .runningText {
     overflow: hidden;
     position: relative;
+    white-space: nowrap;
     background-color: #FFF34C;
     border: solid 0.1px #131313;
     border-radius: 0.3em;
@@ -21,8 +22,7 @@ h1 {
     margin-bottom: 1em;
 }
 
-#scroll-text{
-    white-space: nowrap;
+#scroll-text {
     margin-bottom: 0;
 }
 
@@ -118,6 +118,44 @@ footer {
     .sp-margin-top-sm {
         margin-top: 0.8em;
     }
+
+    /* for Firefox */
+    @-moz-keyframes my-animation {
+        from {
+            -moz-transform: translateX(100%);
+        }
+
+        to {
+            -moz-transform: translateX(-300%);
+        }
+    }
+
+    /* for Chrome */
+    @-webkit-keyframes my-animation {
+        from {
+            -webkit-transform: translateX(100%);
+        }
+
+        to {
+            -webkit-transform: translateX(-300%);
+        }
+    }
+
+    @keyframes my-animation {
+        from {
+            -moz-transform: translateX(0%);
+            -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+        }
+
+        to {
+            -moz-transform: translateX(-400%);
+            -webkit-transform: translateX(-400%);
+            transform: translateX(-400%);
+        }
+
+    }
+
 }
 
 #scroll-text {
@@ -138,7 +176,7 @@ footer {
     }
 
     to {
-        -moz-transform: translateX(-100%);
+        -moz-transform: translateX(-200%);
     }
 }
 
@@ -149,7 +187,7 @@ footer {
     }
 
     to {
-        -webkit-transform: translateX(-100%);
+        -webkit-transform: translateX(-200%);
     }
 }
 
@@ -161,9 +199,9 @@ footer {
     }
 
     to {
-        -moz-transform: translateX(-100%);
-        -webkit-transform: translateX(-100%);
-        transform: translateX(-100%);
+        -moz-transform: translateX(-200%);
+        -webkit-transform: translateX(-200%);
+        transform: translateX(-200%);
     }
 
 }
