--- a/insinhoputrapratama/assets/css/style.css
+++ b/insinhoputrapratama/assets/css/style.css
@@ -620,9 +620,13 @@ progress {
   font-weight: 700;
   line-height: 1.2;
 }
-.h-vh-100{
-  height: 100vh !important;
+
+@media (min-width:900px) {
+  .h-vh-100{
+    height: 100vh !important;
+  }
 }
+
 @media (min-width: 1200px) {
   .display-2 {
     font-size: 2.2rem;
