--- a/insinhoputrapratama/assets/css/style.css
+++ b/insinhoputrapratama/assets/css/style.css
@@ -39595,3 +39595,19 @@ footer.bg-dark.angled.upper-start:before {
     position: relative;
   }
 }
+
+/* UPDATE CSS MOBILE */
+@media (max-width: 991.98px){
+.navbar-stick .navbar-brand {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.navbar-brand img{
+  max-width: 80px !important;
+}
+
+.navbar-other{
+  flex-direction: row-reverse;
+}
+
+}
