--- a/insinhoputrapratama/assets/css/style.css
+++ b/insinhoputrapratama/assets/css/style.css
@@ -39616,3 +39616,32 @@ footer.bg-dark.angled.upper-start:before {
     min-height: 323px;
   }
 }
+
+swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+swiper-container::part(button-next) , swiper-container::part(button-prev) , swiper-container::part(pagination bullet-active) {
+  color: white;
+}
+
+swiper-container, swiper-slide{
+  max-height:500px !important;
+}
