--- a/insinhoputrapratama/assets/css/style.css
+++ b/insinhoputrapratama/assets/css/style.css
@@ -39649,6 +39649,6 @@ swiper-container, swiper-slide{
   max-height:500px !important;
 }
 
-.brand-swiper .swiper-slide{
+.brand-swiper, .brand-swiper .swiper-slide{
   align-self: center;
 }
